# suhail_final

./: .cursorignore  .env  .env.example  .gitignore  15_20637_14069.pbf  CLEAN_SLATE_PROTOCOL.md  COMPREHENSIVE_ASSUMPTION_REVIEW.md  CONFIGURATION_FIXES_TEST_REPORT.md  CONFIGURATION_ISSUES_ANALYSIS.md  DATABASE_ARCHITECTURE_ANALYSIS.md  DATA_ANALYSIS_REPORT.md  ENHANCED_DISCOVERY_INTEGRATION.md  FINAL_RECOVERY_REPORT.md  IMPROVEMENT_RECOMMENDATIONS.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PIPELINE_FORENSIC_ANALYSIS.md  README.md  REPOSITORY_INDEX.md  TODO.md  Transform_single_tile.py  alembic.ini  all_test_results.txt  auto_restart_enrichment.sh  check_db.py  check_enrichment_status.sh  completion_notifier.sh  comprehensive_market_analysis_report.md  database_report.md  download_and_unzip_tiles.py  enrich_parcels.py  flake8_report.txt  geometric_all_provinces_autotune_results_diagnosis.md  geometric_help.txt  geometric_z15_tiles_from_z10_diagnostic_report.md  geometry_stitcher.py  integration_test_results.txt  pipeline_config.yaml  pipeline_config_enhanced.yaml  pipeline_stitch_tiles.py  pipeline_table_uniqueness_review.md  (+15 more)
.cursor/: rules
Sample_tiles/: 15_20636_14069.pbf  15_20636_14070.pbf  15_20637_14070.pbf
_bmad-output/: README.md  project-context.md
alembic/: env.py
assets/: province_bboxes.json
docs/: ACCEPTANCE_CRITERIA.md  ARCHITECTURE.md  BMAD_PROJECT_SCAN.md  BROWNFIELD_PROJECT_DOCUMENTATION.md  CLEAN_SLATE_PROTOCOL.md  CLI_COMMAND_AUDIT.md  Delta_enrichment_PRD.md  Delta_enrichment_todo.md  PRD.md  PROJECT_BRIEF.md  REPO_HYGIENE.md  SUHAIL_SOURCE_AUDIT_2026-07.md  TODO.md  brownfield-architecture.md  handoff_upsert_bottleneck.md  index.md  pipeline_table_uniqueness_review.md  province_wide_scraping_plan.md
exports/: parcels_Transaction_height.kgl.json
logs/: check_stale.py  enrichment_monitor.py  enrichment_watcher.py  live_monitor.py  progress_watcher.py  reset_stale.py  universal_metrics_monitor.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
migrations/: 001_create_meshic_schema.sql  002_populate_reference_data.sql  003_populate_municipalities.sql
province_discovery_results/: al_madenieh_tiles.txt  al_qassim_tiles.txt  discovery_summary.json  eastern_region_tiles.txt  makkah_region_tiles.txt
sample_data/: 14060.pbf  14061.pbf  14062.pbf  combined_bbox_per_region.json  mapMetrics_landMetrics__growthRateType-3_neighborhoodId-10100070.json  mapMetrics_landMetrics__neighborhoodId-10100079.json  parcel_buildingRules__parcelObjectId-101000570134.json  parcel_metrics_priceOfMeter__groupingType-Monthly_parcelObjsIds-1010001112342.json  parcel_metrics_priceOfMeter__groupingType-Monthly_parcelObjsIds-101000503796.json  parcel_metrics_priceOfMeter__groupingType-Monthly_parcelObjsIds-101000538131.json  regions.json  transactions__parcelObjectId-101000503796.json  transactions__parcelObjectId-101000538131.json  z10_tiles_with_parcels_urls.json
(+237 files in other folders)
