[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meshic-pipeline"
version = "0.1.0"
authors = [
  { name="Suhail.AI", email="engineering@suhail.ai" },
]
description = "Meshic data processing pipeline"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp",
    "alembic",
    "fastapi",
    "geoalchemy2",
    "geopandas",
    "h3",
    "h3pandas",
    "mapbox-vector-tile",
    "mercantile",
    "numpy<2.0",
    "pandas",
    "psycopg2-binary",
    "pydantic",
    "pydantic-settings",
    "PyYAML>=6.0",
    "shapely",
    "sqlalchemy",
    "tqdm",
    "typer",
    "uvicorn",
    "asyncpg",
    "greenlet",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-postgresql",
    "aioresponses",
]

[project.scripts]
check_db = "meshic_pipeline.utils.db_checker:app"
meshic-pipeline = "meshic_pipeline.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "real_data: marks tests that use real data (deselect with '-m \"not real_data\"')",
]
testpaths = ["tests"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
geoalchemy2 = "^0.14.4"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]